<resources>
    <string name="app_name">Donatrix</string>
    <!-- Strings related to login -->
    <string name="title_activity_maps">Map</string>
    <string name="prompt_user_type">Please select User Type</string>
    <string name="prompt_location">Please select a Location</string>
    <string name="Comments">Comments</string>
    <string name="Value">Value</string>
    <string name="FullDescription">Full Description</string>
    <string name="ShortDescription">Short Description</string>
    <string name="AddItem">Add Item</string>
    <string name = "AdminHomePage">Admin Home Page</string>
    <string name="DoSomething">Do Something</string>
    <string name="Logout">Logout</string>
    <string name="WelcomeToTheDonatrix">Welcome To The Donatrix</string>
    <string name="ViewMyItems">View My Items</string>
    <string name="ViewAllItems">View All Items</string>
    <string name="SearchItems">Search Items</string>
    <string name="Map">Map</string>
    <string name="LocationList">Location List</string>
    <string name="ShortDescriptionColon">Short Description:</string>
    <string name="TextView">TextView</string>
    <string name="FullDescriptionColon">Full Description:</string>
    <string name="ValueColon">Value:</string>
    <string name="CommentsColon">Comments:</string>
    <string name="Cancel">Cancel</string>
    <string name="LocationColon">Location:</string>
    <string name="LookUpItems">Look Up Items</string>
    <string name="Details">Details</string>
    <string name="NameOfItem">Name of Item</string>
    <string name="SearchForAnItem">Search for an Item</string>
    <string name="Search">Search</string>
    <string name="ChooseALocation">Choose a Location</string>
    <string name="Back">Back</string>
    <string name="Choose">Choose</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name = "Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="GuestHome">Guest Home</string>
    <string name="LocationEmployeeHome">Location Employee Home</string>
    <string name="ManagerHome">Manager Home</string>
    <string name="UserHome">User Home</string>
    <string name="ContinueAsGuest">Continue As Guest</string>
</resources>
